--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "test_portfolio_niroj",
+  "name": "niroj_portfolio",
   "version": "1.0.0",
-  "description": "niroj test portfolio",
+  "description": "This is Niroj's portfolio website",
   "main": "index.js",
   "homepage": "https://nirojshrestha019.github.io/my_portfolio",
   "scripts": {
