--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "Niroj Shrestha",
   "license": "MIT",
   "dependencies": {
-    "gh-pages": "^2.1.1",
-    "node-sass": "^7.0.3"
+    "gh-pages": "^2.1.1"
+  },
+  "devDependencies": {
+    "node-sass": "^9.0.0"
   }
 }
